# SmartCars

./: .gitattributes  .gitignore  README.md  requirements-ml.txt  requirements-runtime.txt
configs/: lanenet_hnet.example.yaml  lfnet.example.yaml  models.yaml  topics.yaml  vehicle.yaml  yolov5_data.example.yaml  yolov5_finetune.yaml
data/: README.md
data/imported/: README.md
deploy/: README.md
docs/: ARCHITECTURE_ROS2.md  Arrangements.xlsx  DEPLOYMENT_ATLAS_ROS2.md  LLM_AGENT_STRETCH.md  PROJECT_BASELINE.md  TRAINING_PIPELINES.md  YOLOV5_FINETUNE.md  手册v1.1.docx
ml/lanenet_hnet/: README.md  dataset.py  export_onnx.py  losses.py  model.py  postprocess.py  train.py
ml/lfnet/: README.md  dataset.py  export_onnx.py  infer_image.py  model.py  train.py
ml/yolov5/: README.md  export_onnx.sh  fetch_yolov5.ps1  fetch_yolov5.sh  train_smartcar.py  train_yolov5.sh  training_status.py
models/: README.md
models/lanenet_hnet/: README.md
models/lfnet/: README.md
models/yolov5/: README.md
reports/: README.md  imported_dataset_report.md
ros2_ws/: README.md
ros2_ws/src/smartcar_agent/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_agent/smartcar_agent/: agent_node.py
ros2_ws/src/smartcar_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_bringup/config/: smartcar.yaml
ros2_ws/src/smartcar_bringup/launch/: smartcar_1_15.launch.py
ros2_ws/src/smartcar_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_camera/smartcar_camera/: camera_node.py
ros2_ws/src/smartcar_chassis/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_chassis/smartcar_chassis/: chassis_node.py
ros2_ws/src/smartcar_decision/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_decision/smartcar_decision/: decision_node.py
ros2_ws/src/smartcar_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/smartcar_interfaces/msg/: ActionCommand.msg  AgentAdvice.msg  ChassisStatus.msg  Detection.msg  DetectionArray.msg  Lane.msg
ros2_ws/src/smartcar_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/smartcar_perception/smartcar_perception/: lane_lfnet_node.py  sign_yolo_node.py
scripts/: build_ros2.sh  check_repo.ps1  fetch_ascend_car.ps1  fetch_ascend_car.sh  ros2_setup_atlas.sh  run_1_15_stack.sh
tools/datasets/: build_imported_datasets.py  export_park_relabel_set.py  export_source_class_relabel_labelme.py  labelme_to_yolo.py  split_yolo_dataset.py  validate_yolo_labels.py  visualize_dataset.py  yolo_to_labelme.py
tools/export/: atc_convert.sh
