<?xml version="1.0"?>
<package format="3">
  <name>smartcar_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the smart car ROS2 stack.</description>
  <maintainer email="team@example.com">SmartCars Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>smartcar_camera</exec_depend>
  <exec_depend>smartcar_perception</exec_depend>
  <exec_depend>smartcar_decision</exec_depend>
  <exec_depend>smartcar_chassis</exec_depend>
  <exec_depend>smartcar_agent</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

