<?xml version="1.0"?>
<package format="3">
  <name>smartcar_interfaces</name>
  <version>0.1.0</version>
  <description>Custom interfaces for the smart car ROS2 stack.</description>
  <maintainer email="team@example.com">SmartCars Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
